Left Section and Path Modification

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- Nav bar -->
       <nav class="NavBar">
         <div class="brandLogo">
-          <img src="/Image-Folder/netflix.png" />
+          <img src="Image-Folder/netflix.png" />
         </div>
 
         <div class="links">
@@ -26,9 +26,9 @@
         </div>
 
         <div class="userSettings">
-          <img src="/Image-Folder/search.png" />
-          <img src="/Image-Folder/notification.png" />
-          <img src="/Image-Folder/man.png" />
+          <img src="Image-Folder/search.png" />
+          <img src="Image-Folder/notification.png" />
+          <img src="Image-Folder/man.png" />
         </div>
       </nav>
 
@@ -38,7 +38,7 @@
           <!-- Ratings -->
           <div class="rating">
             <img
-              src="/Image-Folder/star.png"
+              src="Image-Folder/star.png"
               width="25px"
               height="25px"
               style="vertical-align: middle"
@@ -51,6 +51,36 @@
           </div>
           <!-- Stranger Things Descrption -->
           <p class="serieDescription">Stranger Things is an American science fiction horror drama television series created by the Duffer Brothers and streaming on Netflix. The brothers serve as showrunners and are executive producers along with Shawn Levy and Dan Cohen. The series premiered on Netflix on July 15, 2016.</p>
+          <!-- 3 Seasons  -->
+          <div class="serieSeasons">
+              <div class="s1">
+                  <img src="Image-Folder/seaons1.jpg">
+                  <img src="Image-Folder/play.png" class="playButton">
+                  <p>Season 1</p>
+              </div>
+              <div class="s2">
+                <img src="Image-Folder/season2.png">
+                <img src="Image-Folder/play.png" class="playButton">
+                <p>Season 2</p>
+              </div>
+              <div class="s3">
+                <img src="Image-Folder/seaon3.jpg">
+                <img src="Image-Folder/play.png" class="playButton">
+                <p>Season 3</p>
+              </div>
+          </div>
+          <!-- 2 buttons -->
+          <div class="twoButtons">
+              <div class="watchButton">
+                  <p>Watch Now</p>
+                  <img src="Image-Folder/play.png" width="30px" height="30px" style="opacity: 0.6;">
+              </div>
+              <div class="myFavButton">
+                  <img src="Image-Folder/plus.png" width="30px" height="30px">
+                  <p>My Favourities</p>
+              </div>
+          </div>
+
         </section>
         <section class="rightSection"></section>
       </article>
