JS is added and right section is finished

--- a/index.html
+++ b/index.html
@@ -82,8 +82,38 @@
           </div>
 
         </section>
-        <section class="rightSection"></section>
+        <section class="rightSection">
+          <!-- Heading Title -->
+          <div class="headingTitle">
+            <h1>Actors</h1>
+          </div>
+          <!-- Actors Images -->
+          <div class="actorsImages">
+            <div>
+              <img onClick="reply_click(this.id)" class="active" id="first" src="Image-Folder/Actors-Images/Millie.jpg">
+            </div>
+            <div class="second">
+              <img  onClick="reply_click(this.id)" id="second" src="Image-Folder/Actors-Images/Finn.jpg">
+            </div>
+            <div>
+              <img onClick="reply_click(this.id)" id="third" src="Image-Folder/Actors-Images/David.jpg">
+            </div>
+            <div>
+              <img onClick="reply_click(this.id)" id="fourth" src="Image-Folder/Actors-Images/Noah.jpg">
+            </div>
+            <div>
+              <img  onClick="reply_click(this.id)" id="fifth" src="Image-Folder/Actors-Images/Gaten.jpg">
+            </div>
+          </div>
+          <!-- Actor Name and Description -->
+          <div class="actorDescription">
+            <h3 id="actorName">Millie Bobby Brown</h3>
+            <p id="actorDes">Millie Bobby Brown is a British actress and model. In 2018, Brown was featured in the Time 100 list of the world's most influential people, and was appointed as a UNICEF Goodwill Ambassador, the then youngest person selected for this position.</p>
+          </div>
+        </section>
       </article>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
