Js is added and right section is finished with some new styling

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1>Stranger <br>Things</h1>
           </div>
           <!-- Stranger Things Descrption -->
-          <p class="serieDescription">Stranger Things is an American science fiction horror drama television series created by the Duffer Brothers and streaming on Netflix. The brothers serve as showrunners and are executive producers along with Shawn Levy and Dan Cohen. The series premiered on Netflix on July 15, 2016.</p>
+          <p class="serieDescription">Stranger Things is an American science fiction horror drama television series<br> created by the Duffer Brothers and streaming on Netflix.<br> The brothers serve as showrunners and are executive producers<br> along with Shawn Levy and Dan Cohen. The series premiered on Netflix on July 15, 2016.</p>
           <!-- 3 Seasons  -->
           <div class="serieSeasons">
               <div class="s1">
